@@ -1,0 +1,63 @@
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+    <string name="app_name">Kiwix</string>
+    <string name="menu_openfile">ፋይልን ለመክፈት...</string>
+    <string name="menu_help">እርዳታ</string>
+    <string name="menu_home">መኖርያ ገጽ</string>
+    <string name="menu_forward">ወደ ፊት ለመመልስ</string>
+    <string name="menu_back">ወደ ኋላ ለመመልስ</string>
+    <string name="menu_settings">ምርጫዎች</string>
+    <string name="menu_search">ፍለጋ</string>
+    <string name="menu_searchintext">Find in page</string>
+    <string name="menu_bookmarks">Bookmarks</string>
+    <string name="menu_randomarticle">መጣጥፍ በነሲብ</string>
+    <string name="menu_fullscreen">ሙሉ መጋረጃ</string>
+    <string name="menu_exitfullscreen">Exit full screen</string>
+    <string name="menu_read_aloud">Read aloud</string>
+    <string name="menu_read_aloud_stop">Stop reading aloud</string>
+    <string name="menu_exit">ለመተው</string>
+    <string name="menu_rescan_fs">Rescan SD card</string>
+    <string name="menu_share">Share with friends</string>
+    <string name="save_media">Save Media</string>
+    <string name="save_media_error">An error occured when trying to save the media!</string>
+    <string name="save_media_saved">Saved media as %s in your Pictures folder.</string>
+    <string name="rescan_fs_warning">Scanning for ZIM files, please wait...</string>
+    <string name="button_backtotop">Back to Top</string>
+    <string name="search_label">ፍለጋ</string>
+    <string name="articlesearch_hint">Type to lookup articles</string>
+    <string name="choose_file">Select a ZIM Content File (*.zim)</string>
+    <string name="open_in_new_tab">Open link in new tab?</string>
+    <string name="remove_tab_confirm">Do you want to remove this tab?</string>
+    <string name="remove_tab">Remove tab</string>
+    <string name="add_bookmark">Add bookmark</string>
+    <string name="remove_bookmark">Remove bookmark</string>
+    <string name="info_share_title">I enjoy Wikipedia Offline with Kiwix!</string>
+    <string name="info_share_content">I enjoy Wikipedia Offline with Kiwix! The whole human knowledge at hand wherever you go! Without Internet! http://goo.gl/h9Smkk</string>
+    <string name="error_nozimfilesfound">No ZIM files found on your device.\nTake a look at the Help Page to get directions on how to load content into Kiwix.\nIf you did put a ZIM file on your device/external storage, you might retry in a minute or restart your device.</string>
+    <string name="error_filenotfound">Error: The selected ZIM file could not be found.</string>
+    <string name="error_fileinvalid">Error: The selected file is not a valid ZIM file.</string>
+    <string name="error_articlenotfound">Error: Loading article \"%1$s\" failed.</string>
+    <string name="error_articleurlnotfound">Error: Loading article (Url: %1$s) failed.</string>
+    <string name="pref_display_title">Display</string>
+    <string name="pref_zoom_title">Zoom level</string>
+    <string name="pref_zoom_dialogtitle">Zoom level</string>
+    <string-array name="pref_zoom_entries">
+        <item name="pref_zoom_entry_automatic">Automatic</item>
+        <item name="pref_zoom_entry_small">Small</item>
+        <item name="pref_zoom_entry_medium">Medium</item>
+        <item name="pref_zoom_entry_large">Large</item>
+    </string-array>
+    <string name="pref_info_title">Information</string>
+    <string name="pref_info_version">Version</string>
+    <string name="pref_zoom_enable">Zoom controls</string>
+    <string name="pref_zoom_enable_summary">Display a zoom button in the screen bottom right corner</string>
+    <string name="pref_nightmode">Night mode</string>
+    <string name="pref_nightmode_summary">Show articles with reverted colors</string>
+    <string name="pref_backtotop">Back to Top</string>
+    <string name="pref_backtotop_summary">Display a button at the end of the page to scroll up to the top</string>
+    <string name="share_via">Share via</string>
+    <string name="pref_language_title">ቋንቋ</string>
+    <string name="pref_language_chooser">Choose a language</string>
+    <string name="error_internet_connection_failed">Couldn\'t connect to the internet.</string>
+    <string name="tts_lang_not_supported">The language of this page is not supported, or appropriate language data was not installed. The article may not be properly read.</string>
+</resources>
