@@ -5,6 +5,7 @@ content branding content/branding/
 #locale packagename localename uri/to/files/ [flags]
 locale main aeb            locale/aeb/main/
 locale main af             locale/af/main/
+locale main am             locale/am/main/
 locale main ar             locale/ar/main/
 locale main ary            locale/ary/main/
 locale main as             locale/as/main/
@@ -126,6 +127,7 @@ locale main zh-hk          locale/zh-hk/main/
 
 locale branding aeb        locale/branding/
 locale branding af         locale/branding/
+locale branding am         locale/branding/
 locale branding ar         locale/branding/
 locale branding ary        locale/branding/
 locale branding as         locale/branding/
