@@ -1,0 +1,41 @@
+loadZimFileError=Unable to load '%1'. Are you sure this is a ZIM file?
+alreadyIndexingError=An indexing process is already running.
+noResultsError=No results for this query.
+loadArticleError=Unable to load this article.
+noActiveZimFile=No active ZIM file, please load one first.
+indexZimFileConfirm=This file does not include a search index. Creating one may take several minutes. Do you want to index the ZIM file now?
+abortIndexingConfirm=An indexing process is currently running. Are you sure you want to quit and abort it now?
+removeContentConfirm=Are you sure you want to remove this entry from the list and all related files?
+dontDeleteContentFiles=Do not delete content (ZIM) file.
+restartConfirm=%1 needs to be restarted. Do you want to do it now?
+endOfIndexing=The indexing process is finished.
+removeProfileConfirm=Do you want to remove your profile?
+dontDisplayAnymore=Do not display this dialog box anymore.
+changeSkinNeedRestart=To change the skin, the application has to be restarted. Restart application?
+confirm=ማረጋገጫ
+no=የለም
+yes=አዎ
+ok=እሺ
+cancel=ይቅር
+error=ስኅተት
+information=Information
+indexing=Indexing...
+selectBookmarkSet=Select Bookmark Set file
+nameBookmarkSet=Enter Bookmark Set filename
+bookmarkReferingOtherContent=This bookmark refers to other content. Do you want to load it?
+newContentAvailable=There is new content available for download.
+newContentAvailableInvitation=There is new content available for download. Do you want to see it?
+preparingContentDownload=Preparing download...
+contentDownloadFinished=Download of '%1' is finished.
+feedback=Feedback
+browseLibrary=Browse library
+hideLibrary=Hide library
+library=Library
+fullscreen=ሙሉ መጋረጃ
+quitFullscreen=Exit full screen mode
+integrityCheckSuccessful=The file integrity was succesfuly checked.
+integrityCheckFailed=The integrity check failed. Your file is corrupted.
+doNotAskAnymore=Do not ask anymore
+openContentConfirm=Do you want to open '%1' now?
+downloadRemoteCatalogs=Download remote book catalogs
+downloadRemoteCatalogsConfirm=Do you want to download the remote catalogs of available books?
