@@ -5,6 +5,7 @@ Kiwix 0.9.1
 * FIXED: Wrong tab printed (#820)
 * FIXED: Select text by focusing the searchbox, instead of deleting it (#842)
 * FIXED: Better highlighting colors in the library
+* NEW: New supported user interface languages: Amharic (am),
 * NEW: Minimal skin
 
 Kiwix 0.9
